--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "app",
   "version": "0.1.0",
-  "homepage": "https://rk6093720.github.com/blog",
+  "homepage": "https://rk6093720.github.io/blog",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.12.0",
