--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^7.1.0",
     "@emotion/react": "^11.12.0",
     "@emotion/styled": "^11.12.0",
     "@mui/material": "^5.16.4",
@@ -11,6 +12,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "http-proxy-middleware": "^3.0.0",
+    "newsapi": "^2.4.1",
+    "querystring-es3": "^0.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
@@ -18,9 +21,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-scripts start craco start",
+    "build": "react-scripts build craco build",
+    "test": "react-scripts test craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
